top nav bar looks ok

--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,5 @@
   },
   "author": "Anna Korunska",
   "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^3.3.7"
-  }
+  "dependencies": {}
 }
