--- a/src/package.json
+++ b/src/package.json
@@ -4,6 +4,7 @@
   "description": "online calendar with different nice features",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anna Korunska",
