--- a/src/package.json
+++ b/src/package.json
@@ -11,12 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
     "crypto": "^1.0.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "jquery": "^3.2.1",
+    "moment": "^2.19.2",
     "mongoose": "^4.10.8",
+    "multer": "^1.3.0",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
