--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.19.2",
     "mongoose": "^4.10.8",
     "multer": "^1.3.0",
+    "node-telegram-bot-api": "^0.29.0",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
