--- a/src/package.json
+++ b/src/package.json
@@ -18,13 +18,15 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "jquery": "^3.2.1",
-    "moment": "^2.19.2",
-    "mongoose": "^4.10.8",
+    "moment": "^2.19.4",
+    "mongoose": "^4.13.7",
     "multer": "^1.3.0",
     "node-telegram-bot-api": "^0.29.0",
     "nodemon": "^1.12.1",
+    "npm-install-all": "^1.1.21",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "sharp": "^0.18.4"
   }
 }
