--- a/src/package.json
+++ b/src/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "session": "^0.1.0",
-    "sharp": "^0.18.4"
+    "sharp": "^0.18.4",
+    "telegram-bot-api": "^1.2.0"
   }
 }
